--- a/frontend/css/main.css
+++ b/frontend/css/main.css
@@ -47,3 +47,24 @@ body {
 .sidebar i {
   padding-right: 15px;
 }
+
+
+.wrap {
+  width: 100%;
+  position: absolute;
+  top: 10%;
+  left: 20%;
+}
+
+.form-outline {
+  width: 50%;
+}
+
+#searchButton {
+  background: #2F323A;
+  border: #2F323A
+}
+
+#searchFilter {
+  width: 16%;
+}
