--- a/frontend/css/stylesheet.css
+++ b/frontend/css/stylesheet.css
@@ -105,3 +105,138 @@ form.example::after {
   text-align: center;
   margin: auto;
 }
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 38px;
+  height: 21px;
+  margin-top: 24px;
+}
+
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 15px;
+  width: 15px;
+  left: 3px;
+  bottom: 3px;
+  background-color: white;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+input:checked + .slider {
+  background-color: #162419;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #162419;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(16px);
+  -ms-transform: translateX(16px);
+  transform: translateX(16px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+
+form.preferences p {
+  font-family: Roboto;
+  font-weight: normal;
+  font-size: 24px;
+  text-align: right;
+
+  color: #ffffff;
+
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+form.preferences button {
+  float: left;
+  width: 20%;
+  height: 40px;
+  padding: 10px;
+  background: #162419;
+  color: white;
+  font-size: 17px;
+  border: 1px black;
+  border-left: none;
+  cursor: pointer;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  margin-left: 40%;
+}
+
+form.preferences button:hover {
+  background: #0a0f0b;
+}
+
+form.preferences::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+form.preferences input[type="text"] {
+  padding: 10px;
+  font-size: 17px;
+  border: 1px black;
+  float: left;
+  background: #f1f1f1;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  height: 21px;
+  margin-top: 24px;
+  width: 150px;
+  border-radius: 6px;
+}
+
+form.preferences input[type="number"] {
+  padding: 10px;
+  font-size: 17px;
+  border: 1px black;
+  float: left;
+  background: #f1f1f1;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  height: 28px;
+  width: 86px;
+  border-radius: 20px;
+}
+
+.leftdiv {
+  float: left;
+  text-align: right;
+  width: 350px;
+}
+
+.rightdiv {
+  float: left;
+  text-align: left;
+  width: 150px;
+  margin-left: 20px;
+}
