--- a/frontend/css/stylesheet.css
+++ b/frontend/css/stylesheet.css
@@ -17,7 +17,7 @@ body {
   background: #416d49;
 }
 
-h1 {
+h1.welcome {
   font-family: Rosarivo;
   font-weight: normal;
   font-size: 48px;
@@ -239,4 +239,89 @@ form.preferences input[type="number"] {
   text-align: left;
   width: 150px;
   margin-left: 20px;
+}
+
+/* Nutrition Info */
+
+/* ========================================================================== Nutrition Label ============================================================================= */
+.nutrition-label {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 12px;
+  border: 2px solid #000;
+  padding: 5px;
+  line-height: 1.2;
+  width: 260px;
+}
+.nutrition-label .nutrition-facts {
+  font-family: "Arial Black", "Helvetica Black", "Arial-BoldMT";
+  margin: 0 0 2px 0;
+  padding-bottom: 2px;
+  font-size: 28px;
+  line-height: 1;
+}
+.nutrition-label .nutrition-header {
+  padding-bottom: 2px;
+  margin-bottom: 2px;
+}
+.nutrition-label .nutrition-footer {
+  display: flex;
+  font-size: 10px;
+  margin-top: 5px;
+}
+.nutrition-label .nutrition-footer .asteric {
+  width: 13px;
+}
+.nutrition-label .nutrition-row {
+  display: flex;
+  padding: 2px 0;
+}
+.nutrition-label .nutrition-row > .nutrition-column {
+  flex-grow: 1;
+}
+.nutrition-label .align-bottom {
+  align-self: flex-end;
+}
+.nutrition-label .border-b-none {
+  border-bottom: 0;
+}
+.nutrition-label .border-b {
+  border-bottom: 1px solid #000;
+}
+.nutrition-label .border-b-md {
+  border-bottom: 6px solid #000;
+}
+.nutrition-label .border-b-lg {
+  border-bottom: 10px solid #000;
+}
+.nutrition-label .border-t-sm {
+  border-top: 1px solid #000;
+}
+.nutrition-label .text-sm {
+  font-size: 10px;
+}
+.nutrition-label .text-md {
+  font-size: 16px;
+}
+.nutrition-label .text-bold {
+  font-family: "Arial Black", "Helvetica Black", "Arial-BoldMT";
+}
+.nutrition-label .text-right {
+  text-align: right;
+}
+.nutrition-label .text-indent {
+  margin-left: 15px;
+}
+.nutrition-label .text-indent-md {
+  margin-left: 30px;
+}
+.nutrition-label .calories {
+  font-size: 25px;
+  line-height: 1;
+  font-family: "Arial Black", "Helvetica Black", "Arial-BoldMT";
+}
+.nutrition-label .calories.amount {
+  font-size: 32px;
+}
+.nutrition-label.simplified-label .footnote {
+  padding-bottom: 5px;
 }
