--- a/frontend/css/home.css
+++ b/frontend/css/home.css
@@ -27,8 +27,12 @@ body {
 
 .sidebar h3 {
     color: #ccc;
-    margin-top: 0;
+    margin-top: -5px;
     margin-bottom: 20px;
+    font-family: "Segoe UI", Arial, Helvetica, sans-serif;
+    font-weight: 500;
+    line-height: 1.2;
+    font-size: 170%;
 }
 
 .sidebar a {
