--- a/frontend/css/sidebar.css
+++ b/frontend/css/sidebar.css
@@ -4,6 +4,11 @@ body {
   padding: 0;
   font-family: "Roboto", sans-serif;
   overflow-x: hidden;
+  overflow-y: scroll;
+}
+
+.col {
+  color: #2F323A;
 }
 
 .sidebar {
@@ -26,12 +31,12 @@ body {
 
 .sidebar h3 {
   color: #ccc;
-  margin-top: 0;
+  margin-top: -5px;
   margin-bottom: 20px;
   font-family: "Segoe UI", Arial, Helvetica, sans-serif;
-  font-weight: 400;
-  margin-bottom: 20px;
+  font-weight: 500;
   line-height: 1.2;
+  font-size: 170%;
 }
 
 .sidebar a {
@@ -44,6 +49,7 @@ body {
   box-sizing: border-box;
   transition: 0.6s;
   transition-property: background;
+  float: right;
 }
 
 .sidebar a:hover {
