--- a/frontend/css/login_signup_style.css
+++ b/frontend/css/login_signup_style.css
@@ -1,32 +1,36 @@
-.card-custom{
-    background-color: #2f323a;
-        margin: auto;
-        max-width: 450px;
-        padding: 30px;
-        text-align: center;
-        color: white;
+.card-custom {
+  background-color: #2f323a;
+  margin: auto;
+  max-width: 450px;
+  padding: 30px;
+  text-align: center;
+  color: white;
 }
 
-h1, h2, h3, h4, h5{
-    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    color: rgb(255 255 255 / 75%);
+h1,
+h2,
+h3,
+h4,
+h5 {
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  color: rgb(255 255 255 / 75%);
 }
 
-.button-custom{
-    max-width: 50%;
-              background-color: #2f323a;
-              border: solid 1px;
+.button-custom {
+  max-width: 50%;
+  background-color: #2f323a;
+  border: solid 1px;
 }
 
 .leftdiv {
-    float: left;
-    text-align: right;
-    width: 220px;
-  }
-  
-  .rightdiv {
-    float: left;
-    text-align: left;
-    width: 150px;
-    margin-left: 20px;
-  }
+  float: left;
+  text-align: right;
+  width: 220px;
+}
+
+.rightdiv {
+  float: left;
+  text-align: left;
+  width: 150px;
+  margin-left: 20px;
+}
